# rs-zips2meta2parquet

./: Cargo.toml  README.md  doc-web.sh
examples/zips2meta2parquet/: Cargo.toml  run.sh  zips2meta2parquet
examples/zips2meta2parquet/src/: main.rs
src/: compression.rs  core.rs  lib.rs
src/compression/: gzip.rs  parse.rs  zstd.rs
